fix recipes index horizontal scroll and enforce downcase tags

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,7 +25,7 @@
 }
 
 .welcome-content {
-  position: relative;
+  position: absolute;
   top: 20%;
   left: 10%;
 }
